--- a/news.txt
+++ b/news.txt
@@ -1,1 +1,1 @@
-{ID: 1=(Image: "https://calorizator.ru/sites/default/files/imagecache/product_512/product/pear.jpg",Text: "Пример текста", Date: "03-02-2025"),ID: 2=(Image: "https://link-to-image.jpg",Text: "Пример текста", Date: "03-02-2025")}
+{ID: 1=(Image: "https://i.imgur.com/TfWMzxW.jpeg",Text: "Пример текста", Date: "03-02-2025"),ID: 2=(Image: "https://link-to-image.jpg",Text: "Пример текста", Date: "03-02-2025")}
