--- a/news.txt
+++ b/news.txt
@@ -1,1 +1,1 @@
-{ID: 1=(Image: "https://gameguru.ru/media/f/screens/3/25/51/90/7777.jpg",Text: "А негр нахуй может мне тут не дрочить блять", Date: "04-02-2025"),ID: 2=(Image: "https://i.imgur.com/4Jy6EJA.jpeg",Text: "Пример текста", Date: "03-02-2025"),ID: 3=(Image: "https://i.imgur.com/4Jy6EJA.jpeg",Text: "Пример текста", Date: "03-02-2025")}
+{ID: 1=(Image: "https://gameguru.ru/media/f/screens/3/25/51/90/7777.jpg",Text: "А белый может сделать всё сам? белый может собрать всё с поля? А негр нахуй может мне тут не дрочить блять, и реп нахуй не исполнять, иди работай", Date: "04-02-2025"),ID: 2=(Image: "https://i.imgur.com/4Jy6EJA.jpeg",Text: "Пример текста", Date: "03-02-2025"),ID: 3=(Image: "https://i.imgur.com/4Jy6EJA.jpeg",Text: "Пример текста", Date: "03-02-2025")}
