--- a/news.txt
+++ b/news.txt
@@ -1,1 +1,1 @@
-{ID: 1=(Image: "",Text: "", Date: "05-02-2025")}
+{ID: 1=(Image: "https://i.imgur.com/hMbqkwm.png",Text: "Спасибо вам большое, Тульский и Саня. Вы хорошие люди!", Date: "20-05-1889")}
